[project]
name = "pinry-api"
version = "0.1.0a"
description = "Unofficial Pinry API"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name="rapidcow", email="thegentlecow@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "requests~=2.28.1",
]
license = {text="GPL-3.0-or-later"}
